--- a/src/research/ms5611-emulator/ms5611-emulator.ioc
+++ b/src/research/ms5611-emulator/ms5611-emulator.ioc
@@ -7,7 +7,7 @@ USART2.IPParameters=VirtualMode
 RCC.CortexFreq_Value=60000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F411CEUx
-Mcu.PinsNb=10
+Mcu.PinsNb=12
 ProjectManager.NoMain=false
 USB_DEVICE.VirtualModeFS=Cdc_FS
 RCC.PLLCLKFreq_Value=60000000
@@ -27,33 +27,37 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 PA13.Signal=SYS_JTMS-SWDIO
 PA3.Mode=Asynchronous
-Mcu.IP4=USB_DEVICE
+Mcu.IP4=USART2
 RCC.FCLKCortexFreq_Value=60000000
-Mcu.IP5=USB_OTG_FS
+Mcu.IP5=USB_DEVICE
+I2C1.IPParameters=I2C_Mode
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP0=I2C1
+Mcu.IP1=NVIC
 PA12.Signal=USB_OTG_FS_DP
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 Mcu.UserConstants=
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 ProjectManager.TargetToolchain=STM32CubeIDE
+I2C1.I2C_Mode=I2C_Fast
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=60000000
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
-Mcu.IPNb=6
+Mcu.IPNb=7
 RCC.I2SClocksFreq_Value=150000000
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=60000000
+PB6.Signal=I2C1_SCL
 RCC.VcooutputI2S=150000000
+PB6.Mode=I2C
 RCC.VCOInputMFreq_Value=1562500
 Mcu.Pin6=PA13
 Mcu.Pin7=PA14
 ProjectManager.RegisterCallBack=
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
 RCC.LSE_VALUE=32768
 RCC.AHBFreq_Value=60000000
 Mcu.Pin0=PH0 - OSC_IN
@@ -83,6 +87,7 @@ PA14.Mode=Serial_Wire
 File.Version=6
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=60000000
+PB7.Signal=I2C1_SDA
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Mode=Serial_Wire
@@ -95,6 +100,7 @@ RCC.RTCHSEDivFreq_Value=12500000
 PA2.Signal=USART2_TX
 ProjectManager.ProjectName=ms5611-emulator
 ProjectManager.UnderRoot=true
+Mcu.IP6=USB_OTG_FS
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.SYSCLKFreq_VALUE=60000000
@@ -109,6 +115,7 @@ ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PB7.Mode=I2C
 PA11.Signal=USB_OTG_FS_DM
 PA14.Signal=SYS_JTCK-SWCLK
 USB_OTG_FS.VirtualMode=Device_Only
@@ -120,8 +127,10 @@ RCC.HSI_VALUE=16000000
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=5
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+Mcu.Pin11=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 RCC.PLLM=15
 RCC.PLLN=144
+Mcu.Pin10=VP_SYS_VS_Systick
 RCC.APB1TimFreq_Value=60000000
 PA2.Mode=Asynchronous
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
