--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -36,6 +36,7 @@ PC3.Signal=GPIO_Output
 VP_TIM3_VS_ControllerModeClock.Mode=Clock Mode
 PC1.PinState=GPIO_PIN_SET
 PB13.Locked=true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA8.Locked=true
@@ -84,7 +85,6 @@ Dma.I2C2_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.I2C3_RX.3.Priority=DMA_PRIORITY_VERY_HIGH
 ProjectManager.ProjectFileName=PAYLOAD.ioc
 ADC1.Rank-0\#ChannelRegularConversion=1
-PA15.GPIOParameters=GPIO_Label
 Mcu.PinsNb=46
 PC11.Locked=true
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
@@ -178,6 +178,7 @@ Mcu.Pin13=PA6
 Mcu.Pin14=PA7
 Mcu.Pin19=PB12
 Dma.I2C3_RX.3.MemInc=DMA_MINC_ENABLE
+SH.GPXTI15.ConfNb=1
 ProjectManager.ComputerToolchain=false
 Dma.I2C2_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Mcu.Pin17=PB10
@@ -215,7 +216,7 @@ PC10.Signal=UART4_TX
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 Dma.I2C1_RX.1.MemInc=DMA_MINC_ENABLE
 PA12.GPIOParameters=PinState,GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true,11-MX_RTC_Init-RTC-false-LL-true,12-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true,11-MX_RTC_Init-RTC-false-LL-true,12-MX_TIM4_Init-TIM4-false-HAL-true,13-MX_USART6_UART_Init-USART6-false-HAL-true
 PA9.GPIOParameters=GPIO_Label
 PC0.GPIOParameters=PinState,GPIO_Label
 PA11.GPIOParameters=PinState,GPIO_Label
@@ -238,7 +239,6 @@ RCC.FCLKCortexFreq_Value=168000000
 I2C1.IPParameters=I2C_Mode,DutyCycle,ClockSpeed
 Mcu.IP2=I2C1
 Mcu.IP3=I2C2
-PA15.GPIO_Label=PPS_Input
 Mcu.IP0=ADC1
 PA12.Locked=true
 Mcu.IP1=DMA
@@ -313,7 +313,7 @@ RCC.EnbaleCSS=true
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
 IWDG.Reload=0xfff
-PA15.Signal=GPIO_Input
+PA15.Signal=GPXTI15
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 PB5.GPIO_Label=COMPR_ON
 Dma.I2C2_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
@@ -408,6 +408,7 @@ NVIC.I2C2_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.HSI_VALUE=16000000
 Dma.I2C3_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
 ADC1.NbrOfConversionFlag=1
+SH.GPXTI15.0=GPIO_EXTI15
 RCC.PLLM=4
 RCC.PLLN=168
 Dma.I2C3_TX.2.Direction=DMA_MEMORY_TO_PERIPH
@@ -417,6 +418,7 @@ PB8.Signal=GPIO_Output
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PC9.Signal=I2C3_SDA
 PC7.Mode=Asynchronous
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 RCC.APB1Freq_Value=42000000
 PC12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB11.Locked=true
