--- a/src/board/SINS/SINS.ioc
+++ b/src/board/SINS/SINS.ioc
@@ -7,7 +7,7 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 USART2.IPParameters=VirtualMode,BaudRate
 RCC.CortexFreq_Value=168000000
 Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F405RGTx
 PB10.Mode=I2C
@@ -41,7 +41,7 @@ Mcu.IP5=RCC
 RCC.FCLKCortexFreq_Value=168000000
 Mcu.IP2=I2C1
 I2C1.IPParameters=OwnAddress,I2C_Mode
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SVCall_IRQn=true\:1\:0\:true\:false\:true\:false\:false
 Mcu.IP3=I2C2
 Mcu.IP0=ADC1
 PA12.Locked=true
@@ -77,18 +77,19 @@ Mcu.Pin2=PH0-OSC_IN
 Dma.I2C1_RX.0.Priority=DMA_PRIORITY_LOW
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PC0
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 Mcu.Pin5=PC1
 PA12.PinState=GPIO_PIN_SET
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.UsageFault_IRQn=true\:1\:0\:true\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:1\:0\:true\:false\:true\:false\:false
 ADC1.ScanConvMode=ENABLE
 PA4.Locked=true
 Dma.I2C1_RX.0.Mode=DMA_NORMAL
 SH.ADCx_IN14.ConfNb=1
 SH.ADCx_IN15.0=ADC1_IN15,IN15
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.SysTick_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
 ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 MxDb.Version=DB.6.0.21
@@ -112,9 +113,9 @@ PB8.Locked=true
 SH.ADCx_IN4.ConfNb=1
 PB6.Locked=true
 Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:1\:0\:true\:false\:true\:false\:false
 SH.S_TIM3_CH1.0=TIM3_CH1
-NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.I2C1_ER_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 Dma.RequestsNb=2
 ProjectManager.HalAssertFull=false
 PB0.Locked=true
@@ -134,6 +135,7 @@ RCC.EnbaleCSS=true
 ProjectManager.ToolChainLocation=
 PA2.GPIO_Label=GPS_UART_TX
 RCC.LSI_VALUE=32000
+SH.GPXTI0.0=GPIO_EXTI0
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 USART3.IPParameters=VirtualMode
 PA5.GPIOParameters=GPIO_Label
@@ -144,14 +146,14 @@ SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.S_TIM4_CH1.0=TIM4_CH1
 Dma.Request1=I2C1_TX
 RCC.APB1TimFreq_Value=84000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.BusFault_IRQn=true\:1\:0\:true\:false\:true\:false\:false
 PC4.Locked=true
-NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 PC5.Signal=ADCx_IN15
 SH.ADCx_IN9.ConfNb=1
 ADC1.Rank-6\#ChannelRegularConversion=6
 Dma.Request0=I2C1_RX
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 I2C2.I2C_Mode=I2C_Fast
 PA4.GPIO_Label=LDiod2
@@ -181,6 +183,7 @@ PC11.Signal=USART3_RX
 PC2.Signal=ADCx_IN12
 PC4.Signal=ADCx_IN14
 PC10.Mode=Asynchronous
+SH.GPXTI0.ConfNb=1
 PA11.GPIO_Label=PWR_MEMS
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -188,12 +191,13 @@ PC0.Signal=ADCx_IN10
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PB10.Locked=true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:false\:true\:false
+NVIC.USART2_IRQn=true\:1\:0\:true\:false\:true\:true\:false
 USART2.BaudRate=9600
 PA12.GPIO_Label=PWR_GPS
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 RCC.FamilyName=M
-PA0-WKUP.Signal=GPIO_Input
+PA0-WKUP.GPIO_Label=GPS_PPS_INPUT
+PA0-WKUP.Signal=GPXTI0
 ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_11
 PA0-WKUP.Locked=true
 PA3.Mode=Asynchronous
@@ -273,6 +277,7 @@ Mcu.Pin29=PB7
 Mcu.IP7=SYS
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=84000000
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA4.Signal=ADCx_IN4
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 RCC.SYSCLKFreq_VALUE=168000000
@@ -290,7 +295,7 @@ NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 PC5.GPIO_Label=LDiod10
 USART3.VirtualMode=VM_ASYNC
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:1\:0\:true\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
 ADC1.Rank-1\#ChannelRegularConversion=1
 PA11.Signal=GPIO_Output
@@ -324,6 +329,7 @@ Mcu.Pin10=PA3
 PB7.Locked=true
 PA2.Mode=Asynchronous
 PB8.Signal=I2C1_SCL
+PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
 SH.ADCx_IN5.ConfNb=1
 ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
