--- a/src/board/SINS/SINS.ioc
+++ b/src/board/SINS/SINS.ioc
@@ -20,12 +20,12 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 RCC.PLLQCLKFreq_Value=84000000
 PC5.Locked=true
 PA12.GPIOParameters=PinState,GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-LL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-LL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PA11.GPIOParameters=PinState,GPIO_Label
 PC0.GPIO_Label=LDiod7
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
-RCC.RTCFreq_Value=333333.3333333333
+RCC.RTCFreq_Value=32768
 PA3.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LDiod5
 PD2.Locked=true
@@ -50,7 +50,6 @@ PA12.Signal=GPIO_Output
 Mcu.UserConstants=ADC_TIMEOUT,100
 SH.S_TIM3_CH2.ConfNb=1
 PC1.GPIOParameters=GPIO_Label
-RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_HSE_DIV24
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=168000000
 Mcu.IPNb=11
@@ -61,21 +60,21 @@ PB6.Signal=S_TIM4_CH1
 RCC.VcooutputI2S=192000000
 Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA4
+Mcu.Pin6=PC2
+Mcu.Pin7=PA0-WKUP
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
 RCC.AHBFreq_Value=168000000
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
-Mcu.Pin0=PH0-OSC_IN
-Mcu.Pin1=PH1-OSC_OUT
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
 GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PC0
+Mcu.Pin2=PH0-OSC_IN
 Dma.I2C1_RX.0.Priority=DMA_PRIORITY_LOW
-Mcu.Pin3=PC1
-Mcu.Pin4=PC2
+Mcu.Pin3=PH1-OSC_OUT
+Mcu.Pin4=PC0
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
-Mcu.Pin5=PA0-WKUP
+Mcu.Pin5=PC1
 PA12.PinState=GPIO_PIN_SET
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
@@ -94,6 +93,7 @@ MxDb.Version=DB.6.0.21
 PB0.GPIOParameters=GPIO_Label
 PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
+PC14-OSC32_IN.Mode=LSE-External-Clock-Source
 RCC.VCOInputFreq_Value=2000000
 PC4.GPIO_Label=LDiod9
 PA14.Mode=Serial_Wire
@@ -160,12 +160,13 @@ PA2.Locked=true
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+PC15-OSC32_OUT.Mode=LSE-External-Clock-Source
 SH.S_TIM4_CH1.ConfNb=1
 Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
 ProjectManager.ProjectFileName=SINS.ioc
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PB8.GPIOParameters=GPIO_PuPdOD
-Mcu.PinsNb=34
+Mcu.PinsNb=36
 ProjectManager.NoMain=false
 PC11.Locked=true
 ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,NbrOfConversion
@@ -181,6 +182,7 @@ ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 PC0.Signal=ADCx_IN10
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PB10.Locked=true
 NVIC.USART2_IRQn=true\:1\:0\:true\:false\:true\:true\:false
 USART2.BaudRate=9600
@@ -206,6 +208,7 @@ PB11.GPIOParameters=GPIO_PuPdOD
 PB9.Locked=true
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PA1.Signal=ADCx_IN1
 PB1.Locked=true
 PB10.Signal=I2C2_SCL
@@ -220,24 +223,26 @@ Dma.I2C1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 RCC.APB2Freq_Value=84000000
 SH.ADCx_IN11.0=ADC1_IN11,IN11
 MxCube.Version=6.2.1
+Mcu.Pin35=VP_SYS_VS_Systick
 Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
 PC2.GPIOParameters=GPIO_Label
 SH.ADCx_IN10.ConfNb=1
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 I2C2.ClockSpeed=100000
-Mcu.Pin30=VP_ADC1_TempSens_Input
+Mcu.Pin30=PB8
 PC1.GPIO_Label=LDiod8
 PA1.GPIO_Label=LDiod1
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=168000000
 SH.ADCx_IN12.ConfNb=1
-Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin33=VP_IWDG_VS_IWDG
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
+Mcu.Pin34=VP_RTC_VS_RTC_Activate
 SH.ADCx_IN15.ConfNb=1
-Mcu.Pin31=VP_IWDG_VS_IWDG
+Mcu.Pin31=PB9
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
 SH.ADCx_IN4.0=ADC1_IN4,IN4
-Mcu.Pin32=VP_RTC_VS_RTC_Activate
+Mcu.Pin32=VP_ADC1_TempSens_Input
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PA4.GPIOParameters=GPIO_Label
@@ -245,25 +250,25 @@ SH.ADCx_IN8.ConfNb=1
 ADC1.NbrOfConversion=1
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 IWDG.IPParameters=Prescaler
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F405RGTx
 SH.S_TIM3_ETR.0=TIM3_ETR
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
+Mcu.Pin26=PC11
+Mcu.Pin27=PD2
 RCC.RTCHSEDivFreq_Value=333333.3333333333
 PA2.Signal=USART2_TX
-Mcu.Pin24=PC11
+Mcu.Pin24=PA14
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PD2
+Mcu.Pin25=PC10
 I2C1.OwnAddress=0x7A
 Mcu.IP8=SYS
 Mcu.IP9=USART2
-Mcu.Pin28=PB8
+Mcu.Pin28=PB6
 Mcu.IP6=RCC
 RCC.APB2TimCLKDivider=1
-Mcu.Pin29=PB9
+Mcu.Pin29=PB7
 Mcu.IP7=RTC
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=84000000
@@ -271,13 +276,13 @@ NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA4.Signal=ADCx_IN4
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 RCC.SYSCLKFreq_VALUE=168000000
-Mcu.Pin22=PA14
-Mcu.Pin23=PC10
+Mcu.Pin22=PA12
+Mcu.Pin23=PA13
 PA1.Locked=true
-Mcu.Pin20=PA12
+Mcu.Pin20=PB11
 ADC1.master=1
 PA3.Locked=true
-Mcu.Pin21=PA13
+Mcu.Pin21=PA11
 PA5.GPIO_Label=LDiod3
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
@@ -291,29 +296,29 @@ VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 PA14.Signal=SYS_JTCK-SWCLK
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB0
+Mcu.Pin15=PC4
 Dma.I2C1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PB1
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
-Mcu.Pin19=PA11
+Mcu.Pin16=PC5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin19=PB10
 PB9.GPIO_PuPdOD=GPIO_NOPULL
 SH.S_TIM3_CH1.ConfNb=1
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB10
+Mcu.Pin17=PB0
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=PB11
+Mcu.Pin18=PB1
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
 RCC.PLLM=4
 PB8.Mode=I2C
 RCC.PLLN=168
-Mcu.Pin10=PA5
+Mcu.Pin10=PA3
 IWDG.Prescaler=IWDG_PRESCALER_256
 PB7.Locked=true
 PA2.Mode=Asynchronous
